# dryer

./: Cargo.toml  README.md
crates/dryer-cli/: Cargo.toml
crates/dryer-cli/src/: main.rs
crates/dryer-cli/tests/: cli_tests.rs
crates/dryer-core/: Cargo.toml
crates/dryer-core/src/: candidates.rs  config.rs  files.rs  fingerprints.rs  language.rs  lib.rs  matcher.rs  normalize.rs  output.rs  parse.rs  report.rs
crates/dryer-core/tests/: fixture_tests.rs
fixtures/daml/renamed_function_duplicate/: left.daml  right.daml
fixtures/haskell/renamed_function_duplicate/: left.hs  right.hs
fixtures/mixed/generated_excludes/: left.generated.ts  right.generated.ts
fixtures/mixed/rust_and_typescript/: left.rs  left.ts  right.rs  right.ts
fixtures/rust/impl_method_duplicate/: left.rs  right.rs
fixtures/rust/negative_different_control_flow/: left.rs  right.rs
fixtures/rust/renamed_function_duplicate/: left.rs  right.rs
fixtures/rust/tiny_getters_filtered/: left.rs  right.rs
fixtures/rust/trait_default_method_duplicate/: left.rs  right.rs
fixtures/typescript/arrow_function_duplicate/: left.ts  right.ts
fixtures/typescript/class_method_duplicate/: left.ts  right.ts
fixtures/typescript/dts_ignored/: left.d.ts  right.d.ts
fixtures/typescript/negative_different_control_flow/: left.ts  right.ts
fixtures/typescript/object_method_duplicate/: left.ts  right.ts
fixtures/typescript/react_component_duplicate/: left.tsx  right.tsx
fixtures/typescript/renamed_function_duplicate/: left.ts  right.ts
plans/: rust-typescript-dryer-plan.md
(+2 files in other folders)
