[package]
name = "dryer-core"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
globset.workspace = true
ignore.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
tree-sitter.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-typescript.workspace = true
